--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <option value="REC-2024-B">
     <option value="REC-SPECIAL-01">
     </datalist>
+  
     <div class="main-container">
         <header>
             <h1><span class="icon">🌿</span> QUẢN LÝ CHẤT LƯỢNG CAO ATISÔ</h1>
             <div class="toolbar">
                 <button id="addRowBtn" class="btn-primary">+ Thêm lô mới</button>
-                <button id="exportBtn" class="btn-success">Xuất Excel (CSV)</button>
+                <a href="https://docs.google.com/spreadsheets/d/14uZcv0ZFC-LZzHG4aXKG9vQFDZHXSvOkVqgjClfxOZU/edit?gid=0#gid=0" target="_blank" class="btn-link">Mở Google Sheet ↗</a>
             </div>
         </header>
 
